--- a/public/css/main.css
+++ b/public/css/main.css
@@ -187,3 +187,8 @@ border-radius: 0 0 10px 10px;
 .pagination {
 margin-top: 20px;
 }
+.pagination li {
+	display: inline;
+	list-style: none;
+	margin: 0 5px;
+}
